fixes typo mistakes

--- a/_config.yml
+++ b/_config.yml
@@ -12,20 +12,16 @@ tagline:          'Software Engineer'
 description:      'Software Engineer, passionate about new technology'
 url:              http://blog.foliea.io
 baseurl:          /
-rooturl:          http://www.foliea.io
-resumeurl:        http://www.foliea.io/pages/resume
 
 author:
   name:           'Adrien Folie'
   url:            http://www.foliea.io
+  github:         https://github.com/folieadrien
+  twitter:        https://twitter.com/folie_a
 
 paginate:         5
 
 # Custom vars
 version:          0.1.0
 
-github:
-  repo:           https://github.com/folieadrien/folieadrien.github.io
-  handle:         https://github.com/folieadrien
-  
-twitter:          https://twitter.com/folie_a
+github:           https://github.com/folieadrien/folieadrien.github.io
